== Version 0.1.0
Bug Fixes.

* Modify generator to convert model name to lowercase
* Fix minor bug in smerf_forms_user template, additional 's' was being added to a variable name 
* Include smerf_responses.rb in generated files as content on file depends on specified user model
* Re-write all smerf form processing classes. This was done to prevent the use of class variables
  which caused all sorts of problems. Also the classes are much simpler and cleaner which will 
  make it easier to understand.

== Version 0.0.4
Bug Fix.
* There was a problem with how responses where being handled for the new 
  selectionbox question type. It was incorrectly accessing the response 
  as an array when it was a string. Thanks to Alan Masterson for finding 
  and reporting the bug.

== Version 0.0.3
Minor Enhancements.
* Add new selectionbox question type.
* Add selectionbox_multiselect question option.
* Delete all non-template files from the generator templates directory.
* Move all non-template files to the plugin app directories.
* Modify the generator to use the new structure.
* Update RDoc with new question type details.

== Version 0.0.2
Minor fix.
* Changed rdoc generation to not generate the generator directory preventing the conflict.

== Version 0.0.1
Initial release