@@ -9,19 +9,24 @@ A. Completing the Installation
 
 rake db:migrate
 
-2. Set the record ID of the current user so that SMERF can save responses 
+2. Include smerf in the controller where it will be used, if you want all 
+controllers to have access add it to the application.rb, e.g.
+
+include Smerf
+
+3. Set the record ID of the current user so that SMERF can save responses 
 for each user. This can normally be done once the user has been authenticated 
 by using the following code as an example:
 
-SmerfForm.smerf_user_id = current_user.id
+self.smerf_user_id = current_user.id
 
-3. You can use the example stylesheet(smerf.css) supplied with the plugin 
+4. You can use the example stylesheet(smerf.css) supplied with the plugin 
 which was copied to the /public/stylesheets directory by adding it to your 
 application layout, e.g.
 
 <%= stylesheet_link_tag "smerf", :cache => true  %>
 
-4. To create a link to display a form you can use the Standard REST Path 
+5. To create a link to display a form you can use the Standard REST Path 
 method used for the show action passing the name of the form definition file
 as a parameter, for example
 
@@ -30,17 +35,18 @@ link_to('Complete Test Smerf Form', smerf_url('testsmerf'))
 B. Testing your installation
 ----------------------------
 
-To test the installation you can display the test form by doing something 
-like this:
+To test the installation you can display the test form that comes with SMERF when
+you install it. Everything will work as is as long as you have an existing user record
+with id = 1. If not you need to modify the smerf_test_cotroller.rb file found
+in vendor/plugins/smerf/app/controllers.
 
-1. Set the SMERF user ID in the application.rb file for example to the ID
-of an existing user record, e.g. 
+Simply change the line 
 
-# Set the record ID for the user accessing smerf, normally this would be done
-# once the user has been authenticated
-SmerfForm.smerf_user_id = 1
+    self.smerf_user_id = 1
 
-2. Display the SMERF test form by doing something similar to this
+and set smerf_user_id to an existing user record id.
+
+Then display the SMERF test form by doing something similar to this
 
 http://localhost:3000/smerf_test
 
